--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div></div>
     <center><img id="wega" src="wegas/wega0.webp" height="400" width="300" onclick=wega() alt="d"></center>
     <h3 class="counter-display">You wega (..)</h1>
+    <p>mighty eagle reached 10000 congratation</p>
     <!--i think its obvious that this website is a joke and should not be taken seriously, also explains some lazy coding-->>
 </body>
 <script>
@@ -24,6 +25,7 @@
     let count = 0
     function updateDisplay(){
         counterDisplayElem.innerHTML = `You wega ${count}`;
+        document.title = `wega - ${count}`
     };
     $("#wega").css("animation", "")
     function wega(){
